tạo thư mục scripts

--- a/main.html
+++ b/main.html
@@ -262,7 +262,7 @@
     
     <hr>
 
-    <div id="tab-giao-dich" class="tab-content active"></div>
+    <div id="tab-giao-dich" class="tab-content active">
         <form id="transactionForm" class="form-grid fixed-header" onreset="handleReset()">
           <!-- Dòng 1 -->
           <div>
