tạo thư mục scripts

--- a/main.html
+++ b/main.html
@@ -506,9 +506,37 @@
 </div>
 
 
-    <div id="tab-thong-ke" class="tab-content" style="display: none;">
-      <h3>Thống kê (đang phát triển)</h3>
-    </div>
+<div id="tab-thong-ke" class="tab-content">
+  <h3>Thống kê chi phí</h3>
+  <table id="expenseStatsTable">
+    <thead>
+      <tr>
+        <th>Ngày chi</th>
+        <th>Loại khoản chi</th>
+        <th>Danh mục</th>
+        <th>Sản phẩm</th>
+        <th>Số tiền</th>
+        <th>Đơn vị</th>
+        <th>Nguồn tiền</th>
+        <th>Trạng thái</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+
+  <h3 style="margin-top: 30px;">Tổng hợp theo tháng</h3>
+  <table id="monthlySummaryTable">
+    <thead>
+      <tr>
+        <th>Tháng</th>
+        <th>Loại khoản chi</th>
+        <th>Tổng tiền (VND)</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+</div>
+
 
 
     <!-- Khu vực thông báo -->
