tạo thư mục scripts

--- a/main.html
+++ b/main.html
@@ -503,28 +503,28 @@
       <button type="reset">Làm mới</button>
     </div>
   </form>
+      <h3 style="margin-top: 20px;">Danh sách chi phí</h3>
+    <table id="expenseListTable">
+      <thead>
+        <tr>
+          <th>Ngày chi</th>
+          <th>Loại khoản chi</th>
+          <th>Danh mục</th>
+          <th>Sản phẩm</th>
+          <th>Số tiền</th>
+          <th>Đơn vị</th>
+          <th>Trạng thái</th>
+          <th>Ghi chú</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
 </div>
 
 
-<div id="tab-thong-ke" class="tab-content">
-  <h3>Thống kê chi phí</h3>
-  <table id="expenseStatsTable">
-    <thead>
-      <tr>
-        <th>Ngày chi</th>
-        <th>Loại khoản chi</th>
-        <th>Danh mục</th>
-        <th>Sản phẩm</th>
-        <th>Số tiền</th>
-        <th>Đơn vị</th>
-        <th>Nguồn tiền</th>
-        <th>Trạng thái</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
 
-  <h3 style="margin-top: 30px;">Tổng hợp theo tháng</h3>
+<div id="tab-thong-ke" class="tab-content">
+  <h3>Tổng hợp chi phí theo tháng</h3>
   <table id="monthlySummaryTable">
     <thead>
       <tr>
@@ -536,6 +536,7 @@
     <tbody></tbody>
   </table>
 </div>
+
 
 
 
