tạo thư mục scripts

--- a/main.html
+++ b/main.html
@@ -543,6 +543,7 @@
     <!-- Khu vực thông báo -->
     <div id="notification"></div>
 
+<div id="transactionSection">
     <h2 class="fixed-header">Danh sách giao dịch</h2>
     <div class="pagination fixed-header" id="pagination">
     </div>
@@ -568,6 +569,7 @@
       <tbody>
       </tbody>
     </table>
+</div>
 
     <!-- Modal để hiển thị chi tiết giao dịch -->
     <div id="transactionDetailModal" class="modal">
