tạo thư mục scripts

--- a/main.html
+++ b/main.html
@@ -375,6 +375,7 @@
   <form id="expenseForm" class="form-grid">
     
     <!-- PHẦN 1: Thông tin khoản chi -->
+    <input type="hidden" id="expenseId">
     <div>
       <label>Ngày chi:</label>
       <div class="date-input-container">
