tạo thư mục scripts

--- a/main.html
+++ b/main.html
@@ -501,6 +501,7 @@
 
     <div class="button-row">
       <button type="button" onclick="handleAddExpense()">Thêm chi phí</button>
+      <button type="button" onclick="handleUpdateExpense()">Cập nhật chi phí</button>
       <button type="reset">Làm mới</button>
     </div>
   </form>
