tạo thư mục scripts

--- a/main.html
+++ b/main.html
@@ -385,6 +385,11 @@
     </div>
 
     <div>
+      <label>Người ghi:</label>
+      <input type="text" id="expenseRecorder" readonly>
+    </div>
+
+    <div>
       <label>Loại khoản chi:</label>
       <select id="expenseCategory" onchange="handleCategoryChange()">
         <option value="">-- Chọn loại --</option>
