--- a/main.html
+++ b/main.html
@@ -508,22 +508,23 @@
     </div>
   </form>
       <h3 style="margin-top: 20px;">Danh sách chi phí</h3>
-  <table id="expenseListTable" style="width: 100%; border-collapse: collapse;">
-    <thead>
-      <tr>
-        <th>Ngày chi</th>
-        <th>Loại khoản chi</th>
-        <th>Danh mục</th>
-        <th>Sản phẩm</th>
-        <th>Số tiền</th>
-        <th>Đơn vị</th>
-        <th>Trạng thái</th>
-        <th>Ghi chú</th>
-        <th>Hành động</th>
-      </tr>
-    </thead>
-    <tbody style="display: block; max-height: 400px; overflow-y: auto;"></tbody>
-  </table>
+<table id="expenseListTable">
+  <thead>
+    <tr>
+      <th>Ngày chi</th>
+      <th>Loại khoản chi</th>
+      <th>Danh mục</th>
+      <th>Sản phẩm</th>
+      <th>Số tiền</th>
+      <th>Đơn vị</th>
+      <th>Trạng thái</th>
+      <th>Ghi chú</th>
+      <th>Hành động</th>
+    </tr>
+  </thead>
+  <tbody></tbody>
+</table>
+
   <div class="pagination" id="expensePagination"></div>
 </div>
 
