tạo thư mục scripts

--- a/main.html
+++ b/main.html
@@ -505,10 +505,10 @@
       <th>Loại khoản chi</th>
       <th>Danh mục</th>
       <th>Sản phẩm</th>
+      <th>Gói</th>
       <th>Số tiền</th>
-      <th>Đơn vị</th>
+      <th>Ngày tái tục</th>
       <th>Trạng thái</th>
-      <th>Ghi chú</th>
       <th>Hành động</th>
     </tr>
   </thead>
