tạo thư mục scripts

--- a/main.html
+++ b/main.html
@@ -258,6 +258,7 @@
     <p id="welcome">
       <span id="userWelcome"></span>
       <span id="todayRevenue" style="float: right; font-weight: bold; color: green;"></span>
+      <span id="todayExpenseTotal" style="color: red; margin-left: 15px;"></span>
     </p>
     
     <hr>
@@ -372,12 +373,7 @@
     </div>
 
 <div id="tab-chi-phi" class="tab-content">
-    <!-- Thêm phần hiển thị tổng chi phí ở đầu tab -->
-  <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
     <h2>Quản lý chi phí</h2>
-    <span id="todayExpenseTotal" style="font-weight: bold; color: red; font-size: 16px;"></span>
-  </div>
-
   <form id="expenseForm" class="form-grid">
     
     <!-- PHẦN 1: Thông tin khoản chi -->
