tạo thư mục scripts

--- a/main.html
+++ b/main.html
@@ -316,6 +316,9 @@
   .total-item {
     font-size: 13px;
   }
+  .tab-button[style*="display: none"] {
+  display: none !important;
+  }
 }
 
   </style>
