tạo thư mục scripts

--- a/main.html
+++ b/main.html
@@ -583,6 +583,7 @@
   <table id="expenseListTable">
     <thead>
       <tr>
+        <th>Mã chi phí</th>
         <th>Ngày chi</th>
         <th>Loại khoản chi</th>
         <th>Danh mục</th>
