--- a/main.html
+++ b/main.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <title>Quản lý giao dịch</title>
   <link rel="stylesheet" href="css/style.css" />
+    <!-- ✅ THÊM CSS FILE MỚI CHO THỐNG KÊ -->
+  <link rel="stylesheet" href="css/statistics.css" />
   <!-- Thêm Flatpickr CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
   <!-- Thêm Font Awesome cho icon lịch, icon copy, icon đăng xuất và icon kính lúp -->
