tạo thư mục scripts

--- a/main.html
+++ b/main.html
@@ -585,10 +585,7 @@
       <tr>
         <th>Mã chi phí</th>
         <th>Ngày chi</th>
-        <th>Loại khoản chi</th>
-        <th>Danh mục</th>
-        <th>Sản phẩm</th>
-        <th>Gói</th>
+        <th>Thông tin khoản chi</th>
         <th>Số tiền</th>
         <th>Ngày tái tục</th>
         <th>Trạng thái</th>
