tạo thư mục scripts

--- a/main.html
+++ b/main.html
@@ -588,7 +588,7 @@
         <th>Thông tin khoản chi</th>
         <th>Số tiền</th>
         <th>Ngày tái tục</th>
-        <th>Trạng thái</th>
+        <th>Ghi chú</th>
         <th>Hành động</th>
       </tr>
     </thead>
